# googletestexample

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
include/: version.h
include/libexample/: libexample.h
test/: CMakeLists.txt  libexample_test.cpp  regression.cpp
